# pole--1

./: .gitignore  .tmp-pole-node.json  AGENTS.md  AGENTS.md.bak.20260608T134027  CHANGELOG.md  Cargo.toml  DEVELOPMENT_DOCS.md  IMPLEMENTATION_PLAN.md  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE_NOTES.md  TRACEABILITY.md  _test_api.ps1  build.rs  client-config.json  deliverable-cli-runtime.md  deny.toml  docs_PoLE_Whitepaper.md  node-a.json  node-b.json  node.json  pole-gui-state.json  pole-node-config.toml  push_log.txt  push_result.txt  push_result2.txt  sbom.cdx.json  sbom.spdx.json
.github/workflows/: ci.yml  release.yml
.harness/: agent.md
.harness/reins/code-reviewer/: agent.md
.harness/reins/developer/: agent.md
.harness/reins/pole-cosmos-expert/: agent.md
.harness/reins/pole-gui-expert/: agent.md
.harness/reins/pole-release-expert/: agent.md
.harness/reins/tester/: agent.md
.mavis/plans/: cli-attempt2-msg.json  decision-final.json  fix-open-challenge.yaml  plan-overview.yaml  synthesis-msg.json  verifier-chain-attempt2.json  verifier-chain-msg.json  verifier-cli-attempt2.json  verifier-cli-msg.json  verifier-protocol-msg.json
.omx/: metrics.json
.omx/backups/setup/2026-04-14T04-10-09.303Z/: .gitignore
.omx/logs/: omx-2026-04-13.jsonl  omx-2026-04-18.jsonl  session-history.jsonl  tmux-hook-2026-04-18.jsonl  tmux-hook-2026-04-19.jsonl  tmux-hook-2026-04-20.jsonl  tmux-hook-2026-04-21.jsonl  turns-2026-04-18.jsonl  turns-2026-04-19.jsonl  turns-2026-04-20.jsonl  turns-2026-04-21.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
.omx/state/sessions/omx-1776054420475-wzs0q5/: hud-state.json
chain/: README.md  go.mod  go.sum
chain/app/: app.go  app_test.go
chain/docs/adr/: 0003-eip712-keccak-variant.md
chain/proto/: buf.gen.yaml  buf.yaml
chain/x/pole/: module.go
chain/x/pole/keeper/: keeper.go  keeper_test.go  msg_server.go  query_server.go
config/: node_config.schema.json
desktop/web/: app.css  app.js  index.html
docs/: REPO_HYGIENE.md  SBOM.md  aardio重写方案评估.md  六大P0阻断问题解决方案.md  待解决问题清单.md
docs/operations/: install.md  service-management.md  testnet.md  troubleshooting.md  update.md
docs/superpowers/plans/: 2026-04-20-production-launch-plan.md
docs/wallet/: SPEC.md
packaging/linux/deb/: build-package.sh  conffiles  control  dirs  open-dashboard.sh  pole-node.service  postinst  prerm
packaging/windows/: Product.wxs  build-package.cmd  generate-icon.ps1  install-service.cmd  layout.json  open-dashboard.cmd  pole-node-service.json  start-service.cmd  stop-service.cmd  uninstall-service.cmd
pole-node-data-a/player-reward-blocks/: epoch-000001-slot-000001.json
pole-node-data-a/reward-adjustments/: index.json  summary.json
pole-node-data-b/reward-adjustments/: index.json  period-000000.json  summary.json
scripts/: install-pole-player.cmd  install-pole-player.ps1  package-pole-player.ps1  pole-client-status.ps1  pole-node-status.ps1  pole-player-README.txt  start-pole-client.ps1  start-pole-node.ps1  stop-pole-client.ps1  stop-pole-node.ps1  strip-large-files-from-history.sh
scripts/release/: package-all.cmd
src/: activity_collector.rs  app_paths.rs  chain_bridge.rs  cli_output.rs  cli_parsing.rs  cli_support.rs  control_api.rs  control_api_types.rs  executor.rs  governance_runtime.rs  install_layout.rs  json_file.rs  lib.rs  node_aggregator.rs  node_anomaly.rs  node_cli_support.rs  node_config.rs  node_daemon.rs  node_gvs.rs  node_pipeline.rs  node_prepare.rs  node_rewards.rs  node_runtime.rs  node_settlement.rs  node_storage_audit.rs  node_verifier.rs  p2p.rs  p2p_libp2p.rs  params.rs  primitives.rs  proto.rs  records.rs  service_runtime.rs  service_systemd.rs  service_windows.rs  signing.rs  state.rs  steam_collector.rs  steam_game_directory.rs  storage_book.rs  (+6 more)
src/config/: mod.rs  validator.rs
src/cosmos/: address.rs  eip712.rs  error.rs  mod.rs  pole_msgs.rs  proto.rs  query_client.rs  rpc_client.rs  tx_builder.rs  tx_signer.rs
src/genesis_builder/: input.rs  mod.rs  output.rs
src/observability/: metrics.rs  mod.rs  server.rs
src/schema/: loader.rs  migration.rs  mod.rs  registries.rs  version.rs
src/wallet/: commands.rs  error.rs  keys.rs  keystore.rs  mnemonic.rs  mod.rs
test-wallet-data/wallet/: keystore.json
tests/: client_cli.rs  control_api.rs  harness_feature_consistency.rs  integration.rs  keccak_legacy.rs  node_cli_support.rs  node_daemon.rs  node_pipeline.rs  node_runtime.rs  p2p.rs  packaging_linux.rs  packaging_windows.rs  production_paths.rs  protocol_flow.rs  service_platform.rs  service_runtime.rs  steam_game_directory.rs  storage_book.rs  update_flow.rs
tests/harness/: mod.rs
(+20 files in other folders)
